Finish layout and routes

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,10 +1,10 @@
 <% provide(:title, 'Home') %>
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Graph Yosuke App | <%= yield(:title) %></title>
-  </head>
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
-<p>Sample App</p>
-</html>
+<div class="center hero-unit">
+<h1> Welcome to Graph</h1>
+
+<h2>djfakljdfalk</h2>
+
+<%= link_to "Sign up now!", "#", class: "btn btn-large btn-primary" %>
+</div>
+
+<%= link_to image_tag("rails.png", alt: "Rails") , "http://rubyonrails.org" %>
