--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New user</h1>
+<% provide(:title, 'Sign up') %>
 
-<%= render 'form' %>
-
-<%= link_to 'Back', users_path %>
+<h1>Users#new</h1>
+<p>Find me in app/views/users/new.html.erb</p>
+<p>Sign up</p>
