--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -58,22 +58,30 @@ p {
 /* header */
 
 #logo {
-  float: left;
-  margin-right: 10px;
-  font-size: 1.7em;
-  color: #fff;
-  text-transform: uppercase;
-  letter-spacing: -1px;
-  padding-top: 9px;
-  font-weight: bold;
-  line-height: 1;
+/*   float: left;
+margin-right: 10px;
+font-size: 1.7em;
+color: #fff;
+text-transform: uppercase;
+letter-spacing: -1px;
+padding-top: 9px;
+font-weight: bold;
+line-height: 1; */
+  text-align: center;
 }
 
-#logo:hover {
-  color: #fff;
-  text-decoration: none;
-}
+/* #logo:hover {
+color: #fff;
+text-decoration: none;
+} */
 
+ header ul li {
+  text-align: center;
+  float: right;
+  font-size: 1.3em;
+
+
+}
 
 
 /* footer */
@@ -90,7 +98,7 @@ footer a {
 }
 
 footer a:hover {
-  color: #222;
+  color: #999;
 }
 
 footer small {
@@ -104,5 +112,5 @@ footer ul {
 
 footer ul li {
   float: left;
-  margin-left: 10px;
+  margin-left: 20px;
 }
