--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer class="footer">
   <small>
-    <a href="http://railstutorial.jp/">Rails Tutorial</a>
-    by Michael Hartl
+    <a href="#">Graph</a>
+    by Mozza.co.,ltd
   </small>
   <nav>
     <ul>
