--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,12 +1,15 @@
 <header class = "navbar navbar-fixed-top navbar-inverse">
 <div class="navbar-inner">
   <div class="container">
-    <%= link_to "sample app", "#", id: "logo" %>
-    <nav>
-      <ul class="nav pull-right">
-        <li><%= link_to "Home",root_path %></li>
-        <li><%= link_to "Help",help_path %></li>
-        <li><%= link_to "Sign in","#" %></li>
+   <!-- <%= link_to "Graph APP", root_path, id: "logo" %> -->
+    <%= link_to image_tag("logograph.png", alt: "Rails"), root_path, id:"logo" %>
+    <nav class = "nav navbar-inverse">
+      <ul class="nav navbar-nav">
+        <li class = "active"><%= link_to "Home",root_path %></li>
+        <li class = "active"><%= link_to "Help",help_path %></li>
+        <li class = "active"><%= link_to "Sign in","#" %></li>
+        <li class = "active"><%= link_to "Sign in","#" %></li>
+        <li class = "active"><%= link_to "Sign in","#" %></li>
       </ul>
     </nav>
   </div>
