--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,10 +1,177 @@
-<% provide(:title, 'Home') %>
-<div class="center hero-unit">
-<h1> Welcome to Graph</h1>
+	<head>
+		<meta charset="utf-8">
+		<title>D3: Scaled scatterplot, resized to be bigger!</title>
+		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
+		<style type="text/css">
 
-<h2>djfakljdfalk</h2>
+      body{
+        margin-top: 100px;
+        text-align: center;
+        }
+			.axis path,
+			.axis line{
+				fill:none;
+				stroke: black;
+				shape-rendering: crispEdges;}
+			.axis text {
+				font-family: sans-serif;
+				font-size: 11px;
 
-<%= link_to "Sign up now!", "#", class: "btn btn-large btn-primary" %>
-</div>
 
-<%= link_to image_tag("rails.png", alt: "Rails") , "http://rubyonrails.org" %>
+			}
+			circle:hover{
+				fill: orange;
+
+			}
+			#tooltip{
+				position:absolute;
+				width: 200px;
+				height: auto;
+				padding: 10px;
+				background-color: white;
+				-webkit-border-radius:10px;
+				-moz-border-radius:10px;
+				border-radius: 10px;
+				-webkit-box-shadow: 4px 4px 10px rgba(0,0,0,0.4);
+				-moz-box-shadow: 4px 4px 10px rgba(0,0,0,0.4);
+				box-shadow: 4px 4px 10px rgba(0,0,0,0.4);
+				pointer-events: none;
+
+
+			}
+			#tooltip.hidden{
+				display:none;
+			}
+
+			#tooltip p {
+				margin: 0;
+				font-family: sans-serif;
+				font-size: 16px;
+				line-height: 20px;
+			}
+
+		</style>
+	</head>
+
+		<div id="tooltip" class="hidden">
+			<p><strong>Important Label Heading</strong></p>
+			<p><span id="value">100</span>%</p>
+		</div>
+		<script type="text/javascript">
+
+			//Width and height
+			var w = 800;
+			var h = 500;
+			var padding = 30;
+
+			var dataset = [
+							[5, 20], [480, 90], [250, 50], [100, 33], [330, 95],
+							[410, 12], [475, 44], [25, 67], [85, 21], [220, 88],
+							[600, 150]
+						  ];
+
+			//Create scale functions
+			var xScale = d3.scale.linear()
+								 .domain([0, d3.max(dataset, function(d) { return d[0]; })])
+								 .range([padding, w - padding * 2]);
+
+			var yScale = d3.scale.linear()
+								 .domain([0, d3.max(dataset, function(d) { return d[1]; })])
+								 .range([h - padding, padding]);
+
+			var rScale = d3.scale.linear()
+								 .domain([0, d3.max(dataset, function(d) { return d[1]; })])
+								 .range([30, 80]);
+			var xAxis = d3.svg.axis()
+									.scale(xScale)
+									.orient("bottom")
+									.ticks(5);
+
+			var yAxis = d3.svg.axis()
+									.scale(yScale)
+									.orient("left")
+									.ticks(5);
+
+
+			//Create SVG element
+			var svg = d3.select("body")
+						.append("svg")
+						.attr("width", w)
+						.attr("height", h);
+
+						//丸のやつー
+			svg.selectAll("circle")
+			   .data(dataset)
+			   .enter()
+			   .append("circle")
+			   .attr("cx", function(d) {
+			   		return xScale(d[0]);
+			   })
+			   .attr("cy", function(d) {
+			   		return yScale(d[1]);
+			   })
+			   .attr("r", function(d) {
+			   		return rScale(d[1]);
+			   })
+				 .attr("fill", function(d,i){return "rgba(0,"+ ( i * 20)+ ",255, 0.8)";})
+				 .attr("class", "circle")
+				 .append("title")
+				 .text(function(d){
+						return "This value is " + d;
+				})
+				.on("mouseover", function(d) {
+
+				//Get this bar's x/y values, then augment for the tooltip
+		//		var xPosition = parseFloat(d3.select(this).attr("x")) + xScale.rangeBand() / 2;
+		//		var yPosition = parseFloat(d3.select(this).attr("y")) / 2 + h / 2;
+
+				//Update the tooltip position and value
+				d3.select("#tooltip")
+					.style("left", 100 + "px")
+					.style("top", 100 + "px")
+					.select("#value")
+					.text(d);
+
+				//Show the tooltip
+				d3.select("#tooltip").classed("hidden", false);
+
+				})
+				.on("mouseout", function() {
+
+				//Hide the tooltip
+				d3.select("#tooltip").classed("hidden", true);
+
+				})
+				;
+
+				//テキスト
+
+			svg.selectAll("text")
+			   .data(dataset)
+			   .enter()
+			   .append("text")
+			   .text(function(d) {
+			   		return d[0] + "," + d[1];
+			   })
+			   .attr("x", function(d) {
+			   		return xScale(d[0]) - 20;
+			   })
+			   .attr("y", function(d) {
+			   		return yScale(d[1]);
+			   })
+			   .attr("font-family", "sans-serif")
+			   .attr("font-size", "15px")
+			   .attr("fill", "white");
+
+				svg.append("g")
+						.attr("class", "axis")
+						.attr("transform", "translate(0,"+(h-padding)+")")
+						.call(xAxis);
+
+
+				svg.append("g")
+						.attr("class", "axis")
+						.attr("transform","translate(" + padding + ",0)" )
+						.call(yAxis);
+
+		</script>
